--- a/ecs/index.html
+++ b/ecs/index.html
@@ -3,7 +3,7 @@
 <head>
 	<!-- This is a comment! Text here will be ignored by the browser. -->
 	<meta charset="UTF-8">
-	<title>My Portfolio</title>
+	<title>ECS Projects </title>
 	<link href="myCSS.css" rel="stylesheet" type="text/css">
 </head>
 <body>
@@ -12,7 +12,7 @@
   	<h1>ECS Portfolio</h1>
   </div>
   <div class="nav">
-    <h3><a href="index.html">Home</a> | 2 | 3</h3>
+    <h3><a href="index.html">Home</a> | <a href="index.html">Home</a> | <a href="../saquan barkly/index.html">Home</a></h3>
   </div>
   <div class="content">Hello World!</div>
   <div class="footer">
