--- a/index.html
+++ b/index.html
@@ -14,10 +14,14 @@
   <div class="nav">
     <h3> <a href="index.html">Home</a> | <a href="ecs/index.html">ECS</a> | <a href="saquan barkly/index.html">Saquan barkly</a>
   </div>
-  <div class="content">Hello World!</div>
+  <div class="content">
+	  <img src="images/welcome.png" alt="Welcome" width="960" >
+  </div>
   <div class="footer">
     <h4>About Me | Contact | Copyright 2021</h4>
   </div>
 </div>
+</body>
+</html>
 </body>
 </html>
