--- a/aboutme.html
+++ b/aboutme.html
@@ -15,7 +15,13 @@
     <h3> <a href="index.html">Home</a> | <a href="ecs/index.html">ECS</a> | <a href="saquan barkly/index.html">Saquan barkly</a>
   </div>
   <div class="content">
+	 <h3> Fortnite Skill: </h3>
+	  <ol>
 
+		  <li> Cranking </li>
+		  <li> chun lie </li>
+		  <li> joshua </li>
+	  </ol>
 
 
 
