--- a/aboutme.html
+++ b/aboutme.html
@@ -18,10 +18,18 @@
 	 <h3> Fortnite Skill: </h3>
 	  <ol>
 
-		  <li> Cranking </li>
-		  <li> chun lie </li>
+		  <li> madden </li>
+		  <li> football </li>
 		  <li> joshua </li>
-	  </ol>
+	  </ol> 
+	  <h3> football: </h3>
+	  <ol>
+
+		  <li> fortnite </li>
+		  <li> mother ninja </li>
+		  <li> king david </li>
+	  </ol> 
+
 
 
 
