--- a/aboutme.html
+++ b/aboutme.html
@@ -29,6 +29,13 @@
 		  <li> mother ninja </li>
 		  <li> king david </li>
 	  </ol> 
+	  <h3> Interest: </h3>
+	  <ol>
+
+		  <li> Madden </li>
+		  <li> football </li>
+		  <li> Baseballl </li>
+	  </ol> 
 
 
 
