--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   	<h1>ECS Portfolio</h1>
   </div>
   <div class="nav">
-    <h3> <a href="index.html">Home</a> | <a href="ecs/index.html">ECS</a> | <a href="saquan barkly/index.html">Saquan barkly</a>
+    <h3> <a href="index.html">Home</a> | <a href="ecs/index.html">ECS</a> | <a href="saquanbarkley/index.html">Saquan barkly</a>
   </div>
   <div class="content">
 	  <img src="images/welcome.png" alt="Welcome" width="960" >
