--- a/ecs/index.html
+++ b/ecs/index.html
@@ -14,7 +14,11 @@
   <div class="nav">
  <h3> <a href="../index.html">Home</a> | <a href="index.html">ECS</a> | <a href="../saquanbarkley/index.html">Saquan barkly</a>
   </div>
-  <div class="content">Hello World!</div>
+  <div class="content">
+	  Hello World!
+  <img src="../images/typing.png" alt="welcome" width="960" >
+
+</div>
   <div class="footer">
     <h4> <a href="../aboutme.html">About Me </a> | <a href="mailto:9695119@graniteschools.org">Contact</a> | Copyright 2021</h4>
   </div>
