--- a/saquanbarkley/index.html
+++ b/saquanbarkley/index.html
@@ -15,8 +15,7 @@
   <h3> <a href="../index.html">Home</a> | <a href="../ecs/index.html">ECS</a> | <a href="index.html">Saquan barkly</a>
   </div>
   <div class="content">
-	  Hello World!
-	    <img src="../images/img" alt="Welcome" width="960" >
+	    <img src="../images/img.jpg" alt="Welcome" width="960" >
   </div>
   <div class="footer">
     <h4> <a href="../aboutme.html">About Me </a> | <a href="mailto:9695119@graniteschools.org">Contact</a> | Copyright 2021</h4>
