--- a/saquanbarkley/index.html
+++ b/saquanbarkley/index.html
@@ -16,6 +16,11 @@
   </div>
   <div class="content">
 	    <img src="../images/img.jpg" alt="Welcome" width="960" >
+	   <h3> Timeline </h3>
+	  <ol>
+
+		  <li> Saquon Barkley is an amazing player because he is fast strong and makes great plays. He works hard to come back from injuries which makes him inspiring. He is also humble and gives back to his community. </li>
+	  </ol> 
   </div>
   <div class="footer">
     <h4> <a href="../aboutme.html">About Me </a> | <a href="mailto:9695119@graniteschools.org">Contact</a> | Copyright 2021</h4>
