--- a/saquanbarkley/index.html
+++ b/saquanbarkley/index.html
@@ -4,7 +4,7 @@
 	<!-- This is a comment! Text here will be ignored by the browser. -->
 	<meta charset="UTF-8">
 	<title>My Portfolio</title>
-	<link href="myCSS.css" rel="stylesheet" type="text/css">
+	<link href="../myCSS.css" rel="stylesheet" type="text/css">
 </head>
 <body>
 <div class="container">
@@ -19,7 +19,7 @@
 	   <h3> Timeline </h3>
 	  <ol>
 
-		  <li> Saquon Barkley is an amazing player because he is fast strong and makes great plays. He works hard to come back from injuries which makes him inspiring. He is also humble and gives back to his community. </li>
+		  <li> Saquon Barkley is an amazing player because he is fast strong and makes great plays. He works hard to come back from injuries which makes him inspiring. He is also humble and gives back to his community. he also makes amazing and explosive plays. he has only been on 2 teams and won a Superbowl this season. And he now holds the record for the most rushing yards including postseason of all time  </li>
 	  </ol> 
   </div>
   <div class="footer">
