--- a/ecs/index.html
+++ b/ecs/index.html
@@ -15,8 +15,20 @@
  <h3> <a href="../index.html">Home</a> | <a href="index.html">ECS</a> | <a href="../saquanbarkley/index.html">Saquan barkly</a>
   </div>
   <div class="content">
-	  Hello World!
+	  <h3>Timeline</h3>
+	  <img src="../images/timeline.png"alt= Timeline" width="700" >
+	  <p>Interactive timeline showing the events of Stephen Curry</p>
+	  
+	  <h3>Etch-A-Sketch</h3>
+
+
+	  <h3>ShapeGame</h3>
+
+	  
+	  <h3>Typing Results</h3>
   <img src="../images/typing.png" alt="welcome" width="960" >
+	  <h3>Coding Projects</h3>
+	  <h3>Certification</h3>
 
 </div>
   <div class="footer">
